# K1-AI-Desktop-Assistant

./: .gitattributes  .gitignore  LICENSE  README.md
docs/: uart_protocol.md
models/: README.md
scripts/: 99-study-robot.rules
src/asrpro/: voice_module.hd
src/k1/: CMakeLists.txt  main.cpp  run.sh
src/stm32_face/reference/: expressions.md  sensors.md  uart_protocol.md  wiring.md
src/stm32_face/tools/: stm32_bridge.py
